--- a/redbloom/templates/about.html
+++ b/redbloom/templates/about.html
@@ -1,7 +1,9 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-<h1 class="page-title">About</h1>
-<p>TK</p>
+<div class="content">
+    <h1 class="page-title">About</h1>
+    <p>TK</p>
+</div>
 {% endblock %}
 
