--- a/redbloom/templates/donate.html
+++ b/redbloom/templates/donate.html
@@ -1,8 +1,10 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-<h1 class="page-title">Donate</h1>
-<p>TK</p>
+<div class="content">
+    <h1 class="page-title">Donate</h1>
+    <p>TK</p>
+</div>
 {% endblock %}
 
 
