--- a/redbloom/templates/events.html
+++ b/redbloom/templates/events.html
@@ -2,6 +2,7 @@
 {% extends 'layout.html' %}
 
 {% block content %}
+<div class="content">
     <h1 class="page-title">Events</h1>
     {% for post in events %}
         {{ post_item(post) }}
