--- a/redbloom/static/style.css
+++ b/redbloom/static/style.css
@@ -77,7 +77,7 @@ footer {
 
 .content {
   max-width: 640px;
-  padding: 0 0 2em 0;
+  padding: 0 2em 2em;
   margin: 0 auto;
 }
 
@@ -164,4 +164,29 @@ article {
   left: 0;
   bottom: 0;
   z-index: 0;
+}
+
+@media only screen and (max-width: 480px) {
+  header {
+    display: block;
+  }
+  header h1 {
+    vertical-align: baseline;
+    font-size: 1.2em;
+  }
+  header a {
+    margin: 0.2em;
+    display: inline-block;
+  }
+  .logo {
+    width: 16px;
+    margin-right: 0;
+    vertical-align: baseline;
+  }
+  header > div {
+    display: inline-block;
+  }
+  nav {
+    display: inline;
+  }
 }
