--- a/redbloom/templates/points_of_unity.html
+++ b/redbloom/templates/points_of_unity.html
@@ -2,6 +2,6 @@
 
 {% block content %}
 <div class="content">
-    {{ meta('about')|safe }}
+    {{ meta('points-of-unity')|safe }}
 </div>
 {% endblock %}
