--- a/redbloom/templates/get_involved.html
+++ b/redbloom/templates/get_involved.html
@@ -2,8 +2,7 @@
 
 {% block content %}
 <div class="content">
-    <h1 class="page-title">Get Involved</h1>
-    <p>TK</p>
+    {{ meta('get-involved')|safe }}
 </div>
 {% endblock %}
 
