--- a/redbloom/templates/issue.html
+++ b/redbloom/templates/issue.html
@@ -3,11 +3,13 @@
 
 {% block content %}
 <div class="content">
-    <h1 class="page-title">{{ issue.name }}</h1>
-    {% for post in issue.published_posts|sort(attribute='published_at') %}
-        {% if not post.event %}
-            {{ post_item(post, show_date=issue.slug != 'working-groups') }}
-        {% endif %}
-    {% endfor %}
+    {% if not issue.published_posts %}
+        <div class="placeholder">No posts yet.</div>
+    {% else %}
+        {% for post in issue.published_posts|sort(attribute='published_at') %}
+            {{ post_item(post, show_date=true, wg=issue) }}
+        {% endfor %}
+    {% endif %}
+    <img class="working-group-issue-logo" src="{{ issue.logo_url }}">
 </div>
 {% endblock %}
