--- a/redbloom/templates/post.html
+++ b/redbloom/templates/post.html
@@ -20,18 +20,18 @@
 {% block content %}
 <div class="content">
     <article>
-        <figure>
-            <img src="{{ post.image.path }}" />
-        </figure>
+        {% if post.image %}
+            <figure>
+                <img src="{{ post.image.path }}" />
+            </figure>
+        {% endif %}
         <div class="post--header">
-            <h2>{{ post.title }}</h2>
+            <h2 style="{{post.issue.style}};color:{{post.issue.color}}">{{ post.title }}</h2>
             <div class="post--date">
-                {% if post.issue.slug != 'working-groups' %}
-                    {% if post.event %}
-                        {{ post.event }}
-                    {% else %}
-                        {{ post.published_at.strftime('%B %-d, %Y') }}
-                    {% endif %}
+                {% if post.event %}
+                    {{ post.event }}
+                {% else %}
+                    {{ post.published_at.strftime('%B %-d, %Y') }}
                 {% endif %}
             </div>
         </div>
