--- a/redbloom/static/style.css
+++ b/redbloom/static/style.css
@@ -16,12 +16,13 @@ html, body {
 body {
   margin: 0 auto;
   padding: 0.5em;
-  max-width: 900px;
+  max-width: 1000px;
   padding-top: 80px;
+  font-size: 1.5em;
 }
 .content {
   margin: 0 auto;
-  max-width: 560px;
+  max-width: 680px;
 }
 
 a {
@@ -49,7 +50,8 @@ header {
   width: calc(100% - 1em);
   display: flex;
   top: 0;
-  max-width: 900px;
+  max-width: calc(1000px - 1em);
+  font-size: 0.8em;
 }
 header h1 {
   display: none;
@@ -123,9 +125,9 @@ header h1 {
 }
 .working-group-issue-logo {
   position: fixed;
-  margin-left: -9em;
+  margin-left: -9.5em;
   bottom: 1em;
-  width: 92px;
+  width: 132px;
 }
 .menu--working-groups {
   background: #f5f5f5;
@@ -143,6 +145,9 @@ header h1 {
 .post-item h2 a {
   text-transform: none;
   text-decoration: none;
+}
+.post-item--meta {
+  font-size: 0.8em;
 }
 figure {
   margin: 0;
@@ -193,8 +198,8 @@ figure img {
   text-transform: uppercase;
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
-  font-size: 0.75em;
-  letter-spacing: 2px;
+  font-size: 0.7em;
+  letter-spacing: 3px;
   text-decoration: none;
 }
 .get-involved svg {
@@ -204,8 +209,8 @@ figure img {
   animation-timing-function: linear;
 }
 @keyframes rotate {
-  from { transform: rotate(360deg); }
-  to { transform: rotate(0); }
+  from { transform: rotate(0); }
+  to { transform: rotate(360deg); }
 }
 
 /* Mobile */
