--- a/redbloom/static/style.css
+++ b/redbloom/static/style.css
@@ -40,6 +40,7 @@ p a {
 .brand {
   margin-right: 2em;
   padding-top: 0.5em;
+  display: none;
 }
 .logo {
   width: 100px;
@@ -72,11 +73,12 @@ header nav {
 }
 header nav > ul {
   margin: 0;
-  padding: 1em 0;
+  padding: 0.5em 0;
   list-style-type: none;
   width: 100%;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   background: #F5F5F5;
 }
 header nav > ul > li:hover ul {
@@ -86,6 +88,9 @@ header nav > ul ul {
   list-style-type: none;
   padding: 0;
   position: absolute;
+}
+header nav .logo {
+  width: 50px;
 }
 .menu-expand {
   width: 12px;
@@ -214,6 +219,10 @@ figure img {
   to { transform: rotate(360deg); }
 }
 
+.placeholder {
+  text-align: center;
+}
+
 /* Mobile */
 .menu--working-groups,
 .menu-toggle {
@@ -222,6 +231,7 @@ figure img {
 
 @media only screen and (max-width: 820px) {
   .brand {
+    display: block;
     position: relative;
     display: flex;
     justify-content: space-between;
@@ -231,6 +241,9 @@ figure img {
   .logo {
     width: 48px;
     vertical-align: middle;
+  }
+  #menu--logo {
+    display: none;
   }
   header {
     background: #F5F5F5;
@@ -281,8 +294,10 @@ figure img {
     height: 24px;
     vertical-align: sub;
   }
-}
-
-.placeholder {
-  text-align: center;
+  .content-calendar {
+    margin-left: 0;
+  }
+  .get-involved {
+    display: none;
+  }
 }
