--- a/redbloom/static/style.css
+++ b/redbloom/static/style.css
@@ -275,6 +275,9 @@ figure img {
     position: relative;
     padding-left: 2em;
   }
+  .menu--working-groups li:last-child {
+    margin-bottom: 0;
+  }
   header.open {
     max-height: 100vh;
     overflow-y: scroll;
