--- a/redbloom/static/style.css
+++ b/redbloom/static/style.css
@@ -81,9 +81,6 @@ header nav > ul {
   align-items: center;
   background: #F5F5F5;
 }
-header nav > ul > li:last-child { /* get involved */
-  display: none;
-}
 header nav > ul > li:hover ul {
   display: block;
 }
@@ -291,11 +288,9 @@ figure.post--image img {
   .menu--working-groups li:last-child {
     margin-bottom: 0;
   }
-  header nav > ul > li:last-child { /* get involved */
-    display: block;
-  }
   header.open {
     max-height: 100vh;
+    max-height: -webkit-fill-available;
     overflow-y: scroll;
     z-index: 2;
   }
