--- a/redbloom/static/style.css
+++ b/redbloom/static/style.css
@@ -143,6 +143,10 @@ header h1 {
   bottom: 1em;
   width: 132px;
 }
+.working-group-description {
+  font-size: 0.8em;
+  margin-bottom: 3em;
+}
 .menu--working-groups {
   background: #f5f5f5;
   padding: 0.5em;
